--- a/index.html
+++ b/index.html
@@ -1466,6 +1466,8 @@
             checkFeishuStatus();
         });
     </script>
+    <script src="/feishu-frontend.js"></script>
+
 </body>
 
 </html>
