fix: Disable browser caching and add debug logs for UI verification

--- a/index.html
+++ b/index.html
@@ -1493,7 +1493,7 @@
             checkFeishuStatus();
         });
     </script>
-    <script src="/feishu-frontend.js"></script>
+    <script src="/feishu-frontend.js?v=202512272152"></script>
 
 </body>
 
