fix: Resolve feishuTasks redeclaration error and cleanup index.html

--- a/index.html
+++ b/index.html
@@ -1327,171 +1327,7 @@
             }, 3000);
         }
 
-        // Feishu Integration Functions
-        let feishuTasks = [];
-
-        // Check Feishu status
-        async function checkFeishuStatus() {
-            const statusEl = document.getElementById('feishuStatus');
-            statusEl.innerHTML = '<span class="status-dot"></span><span>检测中...</span>';
-            statusEl.className = 'status-badge';
-
-            try {
-                const response = await fetch(`${API_BASE}/api/feishu/status`);
-                const data = await response.json();
-
-                if (response.ok && data.configured) {
-                    statusEl.innerHTML = '<span class="status-dot"></span><span>已配置</span>';
-                    statusEl.classList.add('status-online');
-                } else {
-                    statusEl.innerHTML = '<span class="status-dot"></span><span>未配置</span>';
-                    statusEl.classList.add('status-offline');
-                }
-            } catch (error) {
-                statusEl.innerHTML = '<span class="status-dot"></span><span>错误</span>';
-                statusEl.classList.add('status-offline');
-            }
-        }
-
-        // Load Feishu tasks
-        async function loadFeishuTasks() {
-            const listEl = document.getElementById('feishuTaskList');
-            const batchBtn = document.getElementById('batchGenerateBtn');
-
-            listEl.innerHTML = '<p style="text-align: center; padding: 2rem;">加载中...</p>';
-            batchBtn.disabled = true;
-
-            try {
-                const response = await fetch(`${API_BASE}/api/feishu/tasks`);
-                const data = await response.json();
-
-                if (!response.ok) {
-                    throw new Error(data.error || '获取任务失败');
-                }
-
-                feishuTasks = data.tasks || [];
-
-                if (feishuTasks.length === 0) {
-                    listEl.innerHTML = '<p style="text-align: center; color: var(--text-secondary); padding: 2rem;">暂无待生成任务</p>';
-                    return;
-                }
-
-                batchBtn.disabled = false;
-
-                listEl.innerHTML = `
-                    <div style="margin-bottom: 1rem; color: var(--text-secondary);">
-                        找到 ${feishuTasks.length} 个待生成任务
-                    </div>
-                    ${feishuTasks.map((task, index) => `
-                        <div class="history-item" style="margin-bottom: 1rem;">
-                            <div style="flex: 1;">
-                                <div style="font-weight: 600; margin-bottom: 0.5rem;">${task.prompt}</div>
-                                <div style="font-size: 0.875rem; color: var(--text-secondary);">
-                                    模型: ${task.model}
-                                    ${task.character ? ` · 角色: ${task.character}` : ''}
-                                </div>
-                            </div>
-                            <div>
-                                <button class="btn btn-primary" onclick="generateSingleTask('${task.recordId}')" style="padding: 0.5rem 1rem;">
-                                    🎬 生成
-                                </button>
-                            </div>
-                        </div>
-                    `).join('')}
-                `;
-
-                showToast(`加载了 ${feishuTasks.length} 个任务`, 'success');
-            } catch (error) {
-                listEl.innerHTML = `<p style="text-align: center; color: var(--danger); padding: 2rem;">❌ ${error.message}</p>`;
-                showToast('加载任务失败: ' + error.message, 'error');
-            }
-        }
-
-        // Generate single task
-        async function generateSingleTask(recordId) {
-            const task = feishuTasks.find(t => t.recordId === recordId);
-            if (!task) {
-                showToast('任务不存在', 'error');
-                return;
-            }
-
-            showToast(`开始生成: ${task.prompt}`, 'success');
-
-            try {
-                const response = await fetch(`${API_BASE}/api/feishu/generate/${recordId}`, {
-                    method: 'POST'
-                });
-
-                const data = await response.json();
-
-                if (!response.ok) {
-                    throw new Error(data.error || '生成失败');
-                }
-
-                showToast('生成成功!', 'success');
-
-                // Refresh task list
-                await loadFeishuTasks();
-            } catch (error) {
-                showToast('生成失败: ' + error.message, 'error');
-            }
-        }
-
-        // Batch generate videos
-        async function batchGenerateVideos() {
-            if (feishuTasks.length === 0) {
-                showToast('没有待生成任务', 'error');
-                return;
-            }
-
-            if (!confirm(`确定要批量生成 ${feishuTasks.length} 个视频吗？这可能需要较长时间。`)) {
-                return;
-            }
-
-            const batchBtn = document.getElementById('batchGenerateBtn');
-            batchBtn.disabled = true;
-            batchBtn.innerHTML = '<div class="spinner"></div><span>批量生成中...</span>';
-
-            let successCount = 0;
-            let failCount = 0;
-
-            for (let i = 0; i < feishuTasks.length; i++) {
-                const task = feishuTasks[i];
-                showToast(`[${i + 1}/${feishuTasks.length}] 生成: ${task.prompt}`, 'success');
-
-                try {
-                    const response = await fetch(`${API_BASE}/api/feishu/generate/${task.recordId}`, {
-                        method: 'POST'
-                    });
-
-                    if (response.ok) {
-                        successCount++;
-                    } else {
-                        failCount++;
-                    }
-                } catch (error) {
-                    failCount++;
-                }
-
-                // Wait a bit between requests
-                if (i < feishuTasks.length - 1) {
-                    await new Promise(resolve => setTimeout(resolve, 2000));
-                }
-            }
-
-            batchBtn.disabled = false;
-            batchBtn.innerHTML = '🎬 批量生成全部';
-
-            showToast(`批量生成完成! 成功: ${successCount}, 失败: ${failCount}`, successCount > 0 ? 'success' : 'error');
-
-            // Refresh task list
-            await loadFeishuTasks();
-        }
-
-        // Check Feishu status on page load
-        window.addEventListener('DOMContentLoaded', () => {
-            checkFeishuStatus();
-        });
+        // Feishu status check removed - handled by feishu-frontend.js
     </script>
     <script src="/feishu-frontend.js?v=202512272152"></script>
 
