--- a/index.html
+++ b/index.html
@@ -472,14 +472,166 @@
             .tabs {
                 flex-wrap: nowrap;
                 overflow-x: auto;
+                -webkit-overflow-scrolling: touch;
+            }
+
+            .tab {
+                min-width: 100px;
+                padding: 0.6rem 1rem;
+                font-size: 0.85rem;
             }
 
             .card {
-                padding: 1.5rem;
+                padding: 1rem;
+                border-radius: 0.75rem;
+            }
+
+            .card-title {
+                font-size: 1.1rem;
             }
 
             .model-grid {
-                grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+                grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+                gap: 0.75rem;
+            }
+
+            .model-card {
+                padding: 0.75rem;
+            }
+
+            /* 视频和图片优化 */
+            .result-media {
+                max-width: 100%;
+                margin: 1rem 0;
+                border-radius: 0.5rem;
+            }
+
+            .result-media video,
+            .result-media img {
+                width: 100%;
+                height: auto;
+                max-height: 70vh;
+                object-fit: contain;
+            }
+
+            /* 按钮优化 - 更大的触摸区域 */
+            .btn {
+                padding: 0.85rem 1.5rem;
+                font-size: 0.95rem;
+                min-height: 44px;
+                /* iOS 推荐的最小触摸目标 */
+            }
+
+            .btn-secondary {
+                padding: 0.7rem 1.2rem;
+            }
+
+            /* 输入框优化 */
+            input[type="text"],
+            textarea,
+            select {
+                font-size: 16px;
+                /* 防止 iOS 自动缩放 */
+                padding: 0.85rem;
+            }
+
+            textarea {
+                min-height: 120px;
+            }
+
+            /* 流式输出区域优化 */
+            .stream-output {
+                font-size: 0.8rem;
+                max-height: 200px;
+                padding: 0.75rem;
+            }
+
+            /* 历史记录优化 */
+            .history-item {
+                flex-direction: column;
+                gap: 0.75rem;
+            }
+
+            .history-thumbnail {
+                width: 100%;
+                height: auto;
+                max-height: 200px;
+                object-fit: cover;
+            }
+
+            /* Toast 通知优化 */
+            .toast {
+                bottom: 1rem;
+                right: 1rem;
+                left: 1rem;
+                padding: 0.85rem 1rem;
+                font-size: 0.9rem;
+            }
+
+            /* 文件上传区域优化 */
+            .file-upload-label {
+                padding: 2rem 1rem;
+                font-size: 0.9rem;
+            }
+
+            .file-preview {
+                max-width: 100%;
+            }
+
+            /* 状态栏优化 */
+            .status-badge {
+                font-size: 0.8rem;
+                padding: 0.4rem 0.8rem;
+            }
+
+            /* 网格布局优化 */
+            .grid-2 {
+                grid-template-columns: 1fr;
+            }
+
+            /* 表单组间距优化 */
+            .form-group {
+                margin-bottom: 1.2rem;
+            }
+
+            /* Header 优化 */
+            header {
+                padding: 1.5rem 0;
+                margin-bottom: 2rem;
+            }
+
+            .subtitle {
+                font-size: 0.95rem;
+            }
+        }
+
+        /* 超小屏幕优化 (iPhone SE 等) */
+        @media (max-width: 375px) {
+            .container {
+                padding: 0.75rem;
+            }
+
+            .logo {
+                font-size: 1.75rem;
+            }
+
+            .tab {
+                min-width: 85px;
+                padding: 0.5rem 0.75rem;
+                font-size: 0.8rem;
+            }
+
+            .card {
+                padding: 0.85rem;
+            }
+
+            .btn {
+                padding: 0.75rem 1.2rem;
+                font-size: 0.9rem;
+            }
+
+            .model-grid {
+                grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
             }
         }
 
